# mono-cli

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
docs/: _config.yml  index.md
docs/_layouts/: default.html
docs/assets/css/: style.css
src/mono/: __init__.py
