[project]
name = "mono"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NicoAppAkademie", email = "nico.teufel@app-akademie.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
mono = "mono:app"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
